--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: build
         env:
-          BASE_PATH: "/website"
+          BASE_PATH: "/"
         run: |
           npm run build
           touch build/.nojekyll
