--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Auto formatting
+        run: npm run format
+
       - name: build
         env:
           BASE_PATH: "/"
