--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
 	"dependencies": {
 		"@floating-ui/dom": "1.5.3",
 		"@fortawesome/fontawesome-free": "^6.5.1",
-		"@sveltejs/adapter-node": "^3.0.0",
-		"@sveltejs/adapter-static": "^3.0.1"
+		"@sveltejs/adapter-node": "^3.0.0"
 	}
 }
