--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
+		"dev": "bun run gen && vite dev",
+		"build": "bun run gen && vite build",
+		"gen": "bun src/lib/init.ts",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -36,6 +37,6 @@
 	"dependencies": {
 		"@floating-ui/dom": "1.5.3",
 		"@fortawesome/fontawesome-free": "^6.5.1",
-		"@sveltejs/adapter-node": "^3.0.0"
+		"@sveltejs/adapter-static": "^3.0.1"
 	}
 }
